Fix collapse to mail-side-bar

--- a/assets/css/apps/mail/MailCompose.css
+++ b/assets/css/apps/mail/MailCompose.css
@@ -15,7 +15,7 @@
 .compose-btn {
     display: flex;
     align-items: center;
-    background: #c2e7ff; /* Light blue like Gmail */
+    background: #c2e7ff; 
     color: #001d35;
     font-family: "Roboto", serif;
     font-weight: 500;
@@ -24,7 +24,7 @@
     border: none;
     border-radius: 16px;
     cursor: pointer;
-    transition: background 0.2s, box-shadow 0.2s;
+    transition: width 0.2s ease-in-out, padding 0.2s ease-in-out;
     margin:2px 106px 16px 8px;
     width: 150px;
     height: 55px;
@@ -37,7 +37,9 @@
 }
 
 .compose-btn:hover {
-    box-shadow:  0px 1px 2px 0px rgba(0, 0, 0, 0.2) , 0px 1px 3px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 3px 0 rgba(60, 64, 67, .3), 0 4px 8px 3px rgba(60, 64, 67, .15);
+    background-color: #c2e7ff;
+    transition: box-shadow 0.2s ;
 }
 
 .compose-btn img {
@@ -73,13 +75,12 @@
 }
 
 
-/* Input fields */
+
 .mail-compose input {
     width: 100%;
     padding: 10px;
     border: none;
     box-shadow: rgba(100, 121, 143, 0.12) 0px -1px 0px 0px inset;
-    /* border-bottom: 1px solid #ddd; */
     border-radius: 0;
     font-size: 14px;
 }
@@ -96,13 +97,6 @@
     resize: none;
 }
 
-/* Footer */
-.compose-footer {
-    display: flex;
-    justify-content: flex-start;
-    padding: 10px;
-}
-
 .send-btn {
     font-family: "Roboto", serif;
     background: #0b57d0;
@@ -116,7 +110,6 @@
     font-weight: 600;
     
 }
-
 .send-btn:hover {
     background: #1765cf;
 }
