--- a/assets/css/apps/mail/MailFolderList.css
+++ b/assets/css/apps/mail/MailFolderList.css
@@ -7,7 +7,7 @@
 .mail-folder-list button {
     display: flex;
     align-items: center;
-    padding: 0px 12px 0px 26px;
+    padding: 0px 12px 0px 16px;
     height: 32px;
     background: none;
     border: none;
@@ -49,3 +49,14 @@
     min-width: 18px;
     text-align: center;
 }
+
+
+.mail-folder-list button i {
+    margin-right: 16px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
