--- a/assets/css/apps/mail/MailIndex.css
+++ b/assets/css/apps/mail/MailIndex.css
@@ -1,4 +1,3 @@
- /* mail index  */
 
  .mail-index {
     display: flex;
@@ -6,15 +5,11 @@
     margin-top: 70px;
  }
 
- .mail-sidebar {
-   width: 250px; /* Set sidebar width */
-   display: flex;
-   flex-direction: column;
-}
+ 
 
-/* Mail Content (Mail List) */
+
 .mail-content {
-   flex-grow: 1; /* Take remaining space */
+   flex-grow: 1; 
    display: flex;
    flex-direction: column;
    padding: 10px;
@@ -23,13 +18,10 @@
 }
 
 .mail-index .gmail-logo {
-   /* padding-right: 30px; */
    width: 110px;
    height: 40px;
   }
 
-  
-  
   .mail-sidebar-logo {
    display: flex;
    padding: 10px;
@@ -47,3 +39,58 @@
    text-align: center;
    color: #5f6368;
   }
+
+  .mail-sidebar {
+   width: 256px; 
+   display: flex;
+   flex-direction: column;
+   transition: width 0.2s ease-in-out;
+   padding-top: 10px;
+}
+
+.mail-sidebar.collapsed {
+   width: 60px;
+}
+
+
+.mail-sidebar-content {
+   display: flex;
+   flex-direction: column;
+   transition: opacity 0.2s ease-in-out;
+}
+
+
+.mail-sidebar.collapsed .mail-folder-list button span {
+   display: none;
+}
+
+.mail-sidebar.collapsed .unread-count {
+   display: none;
+}
+
+.mail-sidebar.collapsed .compose-btn {
+   width: 48px;
+   padding: 10px;
+}
+
+
+.mail-sidebar.collapsed .compose-btn span {
+   display: none;
+}
+
+
+.mail-folder-list button:hover {
+   background-color: rgba(0, 0, 0, 0.04);
+}
+
+.mail-sidebar.collapsed .mail-folder-list button {
+   width: 40px;
+   border-radius: 50%;
+   padding: 0px 12px;
+    margin-left: 10px;
+}
+
+.mail-sidebar.collapsed .gmail-logo {
+   display: none;
+}
+
